# TrustChain-Sovereign

./: .aiexclude  .geminiignore  .gitignore  .pnp.cjs  .yarnrc.yml  AGENT.md  GRANT_SPEC.md  README.md  force_sync.sh  grant.md  package.json  setup_full.sh  start_app.command  test_sovereign.sh  tsconfig.json
TrustChainOG/: package.json
archive/trustchain-vite/: index.html  package.json
audits/: AUDIT_LOG_FEB_2026.md  ON_CHAIN_PROPOSAL.md  Project_Overview.txt  updates.txt
backend/: .env.example  .pnp.cjs  integrityEngine.js  integrityEngine.ts  package.json  server.js  test.js  test.ts  test_import.js  test_require.js  tsconfig.json  vercel.json
backend/.vercel/: project.json
backend/agents/: RiskAuditorAgent.js
backend/public/: index.html
backend/scripts/: SVRQGjRmizi3Lvv4vHmtW4x6ap7dKs65QVooUdnbZuJ.json  demo.sh  hydrate.js
backend/services/: integrityEngine.js  notaryService.ts  notary_sync.js  notary_sync.ts
backend/tests/: agent.test.js  integrity_new.test.js  rpc.test.js
backend/utils/: rpc.js  sentinel.js  solanaBridge.js
docs/: FAIRSCALE_API.md
docs/diagrams/: architecture.mmd
frontend/: .pnp.cjs  README.md  craco.config.js  grant_considderations.txt  next.config.js  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.css  App.js  App.jsx  App.test.js  App.test.jsx  ConnectButton.jsx  ProposalUtils.js  index.css  (+3 more)
on-chain/trustchain-notary/programs/trustchain-notary/: Cargo.toml
on-chain/trustchain-notary/programs/trustchain-notary/src/: lib.rs
scripts/: update_env.js
trustchain-vite/: package.json
(+20 files in other folders)
