[package]
name = "trustchain-notary"
version = "0.1.0"
description = "TrustChain Sovereign Notary"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustchain_notary"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }